--- a/templates/second_task/class_template.html
+++ b/templates/second_task/class_template.html
@@ -2,9 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Мой сайт</title>
+
 </head>
-<body>
-"Это шаблон для классового представления"
+<body bgcolor=?>
+    "Это шаблон для классового представления"
+    <h1>Большой</h1>
+    <h2>Не такой большой</h2>
+    <h3>Не такой большой</h3>
+    <p>dfvdsvkjfsmdlfgvjmdfjm df;lkobf;lbmfblmsd</p>
+    <button> open </button>
+    <a href="#"> text </ahref>
+        <ul>
+            <li>text1</li>
+            <li>text2</li>
+            <li>text3</li>
+        </ul>
+
 </body>
 </html>
